[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "janitor-sucker"
version = "0.1.0"
description = "Automates extracting characters from JanitorAI to Sucker.dev"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "selenium",
    "pillow",
]

[project.scripts]
janitor-sync = "sync:main"

[tool.setuptools]
py-modules = ["sync", "setup_profile"]