[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "janitor-sucker"
version = "0.1.2"
description = "Automates extracting characters from JanitorAI to Sucker.dev"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "selenium",
    "pillow",
]

[project.scripts]
janitor-dl = "cli:main"

[tool.setuptools]
py-modules = ["cli", "sync", "setup_profile", "create_profile"]